--- a/src/Components/PhotoCommentsForm/PhotoCommentsForm.module.css
+++ b/src/Components/PhotoCommentsForm/PhotoCommentsForm.module.css
@@ -1,8 +1,12 @@
 .form {
-  display: gri;
+  display: grid;
   grid-template-columns: 1fr auto;
   align-items: stretch;
   margin: 1rem;
+}
+
+.single.form {
+  margin: 1rem 0;
 }
 
 .textarea {
